@startuml Figura 14D - Módulo Justificaciones y Retiros

' Configuración
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam groupInheritance 2
hide circle
skinparam shadowing false

title Figura 14D. Diagrama de Clases – Módulo Justificaciones y Retiros

' ============================================
' CLASES DEL MÓDULO JUSTIFICACIONES Y RETIROS
' ============================================

class Justificacion {
  +idJustificacion: int
  +idEstudiante: int
  +idIe: int
  +idTipoJustificacion: int
  +idEstadoJustificacion: int
  +idEstadoAsistencia: int
  +fechaInicio: DateTime
  +fechaFin: DateTime
  +motivo: string
  +observaciones: string
  +fechaPresentacion: DateTime
  +presentadoPor: int
  +revisadoPor: int
  +fechaRevision: DateTime
  +observacionesRevision: string
  +createdAt: DateTime
  +updatedAt: DateTime
  --
  +presentar()
  +actualizar()
  +eliminar()
  +aprobar()
  +rechazar()
  +adjuntarDocumento()
  +aplicarAAsistencias()
  +obtenerDocumentos()
  +estaVigente()
}

class TipoJustificacion {
  +idTipoJustificacion: int
  +nombre: string
  +codigo: string
  +requiereDocumento: boolean
  +diasMaximos: int
  +activo: boolean
  --
  +crear()
  +actualizar()
  +eliminar()
  +listarTodos()
}

class EstadoJustificacion {
  +idEstadoJustificacion: int
  +nombre: string
  +codigo: string
  +esFinal: boolean
  +activo: boolean
  --
  +crear()
  +actualizar()
  +eliminar()
  +listarTodos()
}

class DocumentoJustificacion {
  +idDocumento: int
  +idJustificacion: int
  +nombreArchivo: string
  +rutaArchivo: string
  +tipoArchivo: string
  +tamanioBytes: int
  +descripcion: string
  +subidoPor: int
  +createdAt: DateTime
  --
  +subir()
  +eliminar()
  +descargar()
  +validarTipo()
  +validarTamanio()
}

class Retiro {
  +idRetiro: int
  +idEstudiante: int
  +idIe: int
  +idGradoSeccion: int
  +fecha: DateTime
  +hora: DateTime
  +idTipoRetiro: int
  +origen: string
  +reportadoPorDocente: int
  +apoderadoContactado: int
  +horaContacto: DateTime
  +medioContacto: string
  +apoderadoQueRetira: int
  +dniVerificado: string
  +verificadoPor: int
  +idEstadoRetiro: int
  +observaciones: string
  +createdAt: DateTime
  +updatedAt: DateTime
  --
  +solicitar()
  +actualizar()
  +eliminar()
  +reportar()
  +contactarApoderado()
  +autorizar()
  +verificar()
  +cambiarEstado()
  +completar()
  +cancelar()
  +notificarApoderado()
}

class TipoRetiro {
  +idTipoRetiro: int
  +nombre: string
  --
  +crear()
  +actualizar()
  +eliminar()
  +listarTodos()
}

class EstadoRetiro {
  +idEstadoRetiro: int
  +codigo: string
  +nombre: string
  +orden: int
  +esFinal: boolean
  +createdAt: DateTime
  --
  +crear()
  +actualizar()
  +eliminar()
  +listarTodos()
  +obtenerSiguiente()
}

class AutorizacionRetiro {
  +idAut: int
  +idEstudiante: int
  +idApoderado: int
  +vigenteDesde: DateTime
  +vigenteHasta: DateTime
  +observacion: string
  --
  +crear()
  +actualizar()
  +eliminar()
  +estaVigente()
  +renovar()
  +verificarAutorizacion()
}

' ============================================
' RELACIONES
' ============================================

' Justificaciones
Justificacion -- TipoJustificacion
Justificacion -- EstadoJustificacion
Justificacion *-- DocumentoJustificacion

' Retiros
Retiro -- TipoRetiro
Retiro -- EstadoRetiro

' ============================================
' NOTAS EXPLICATIVAS
' ============================================

note top of Justificacion
  **Justificación de Inasistencias**
  
  Permite formalizar las ausencias
  y enlazarlas con asistencias
  específicas.
  
  **Flujo:**
  1. Apoderado presenta justificación
  2. Adjunta documentos de respaldo
  3. Docente/Admin revisa
  4. Se aprueba o rechaza
  5. Se aplica a asistencias afectadas
  6. Se notifica resultado
  
  **Tipos:**
  • Enfermedad
  • Cita médica
  • Viaje
  • Duelo familiar
  • Otros
end note

note right of DocumentoJustificacion
  **Documentos de Respaldo**
  
  Adjunta documentos digitales
  que respaldan la justificación:
  
  • Certificados médicos
  • Constancias
  • Otros documentos
  
  **Validaciones:**
  • Tipo de archivo permitido
  • Tamaño máximo
end note

note bottom of Retiro
  **Retiro Anticipado**
  
  Evento crítico de salida
  anticipada del estudiante.
  
  **MEJORA DEL DOP:**
  Control más seguro con:
  • Verificación de identidad (DNI)
  • Notificación automática
  • Registro de autorización
  • Trazabilidad completa
  
  **Flujo:**
  1. Solicitud (apoderado/docente)
  2. Sistema contacta apoderado
  3. Apoderado autoriza
  4. Verificación de identidad
  5. Entrega del estudiante
  6. Notificación de completado
  
  **Tipos:**
  • Programado
  • Emergencia médica
  • Emergencia familiar
  • Cita médica
  • Trámite personal
  • Otros
  
  **Estados:**
  1. Solicitado
  2. Contactando apoderado
  3. Apoderado contactado
  4. Autorizado
  5. En verificación
  6. Completado
  7. Cancelado
end note

note left of AutorizacionRetiro
  **Autorización Permanente**
  
  Define qué apoderados están
  autorizados para retirar a
  un estudiante específico.
  
  **Características:**
  • Incluye período de vigencia
  • Puede ser renovada
  • Se verifica el DNI al momento
    del retiro
  
  **Seguridad:**
  Solo apoderados autorizados
  pueden retirar al estudiante.
end note

legend right
  **Módulo Justificaciones y Retiros**
  
  **Responsabilidad:**
  Gestiona justificaciones de
  inasistencias y retiros anticipados.
  
  **Componentes:**
  • Justificaciones (4 clases)
  • Retiros (4 clases)
  
  **Clases:** 8
  
  **Mejora DOP:**
  • Justificación digital vs. papel
  • Retiro con control seguro
  
  **Relaciones:**
  *-- Composición
  --  Asociación
endlegend

@enduml
